# ClawAcosmi

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.gateway  Dockerfile.sandbox-browser  LICENSE  Makefile  README.md  Rust 沙箱设计方案文档.md  SOUL.md  STARTUP.md  Token-Analysis-Log.md  docker-compose.yml  remove_bg.py  start.bat  start.command
Argus/rust-core/: Cargo.toml
Argus/rust-core/include/: argus_core.h
Argus/rust-core/src/: accessibility.rs  capture.rs  capture_sck.rs  crypto.rs  imaging.rs  input.rs  keyframe.rs  lib.rs  metrics.rs  pii.rs  shm.rs
backend/: CMakeLists.txt  Makefile  go.mod  go.sum
backend/bridge/inference/: inference.go
backend/bridge/vision/: vision.go
backend/cmd/acosmi/: main.go
backend/cmd/desktop/: Taskfile.yml  runtime_test.go
backend/cmd/openacosmi/: cmd_agent.go  cmd_browser.go  cmd_channels.go  cmd_cron.go  cmd_daemon.go  cmd_doctor.go  cmd_gateway.go  cmd_hooks.go  cmd_infra.go  cmd_logs.go  cmd_memory.go  cmd_misc.go  cmd_models.go  cmd_nodes.go  cmd_plugins.go  cmd_sandbox.go  cmd_security.go  cmd_setup.go  cmd_skills.go  cmd_status.go  main.go  setup_api_key.go  setup_auth_apply.go  setup_auth_config.go  setup_auth_config_minimax.go  setup_auth_config_openacosmi.go  setup_auth_config_test.go  setup_auth_credentials.go  setup_auth_credentials_test.go  setup_auth_models.go  setup_auth_models_test.go  setup_auth_options.go  setup_channels.go  setup_channels_test.go  setup_helpers.go  setup_helpers_test.go  setup_hooks.go  setup_hooks_test.go  setup_noninteractive.go  setup_noninteractive_test.go  (+6 more)
backend/internal/acp/: acp_test.go  client.go  commands.go  event_mapper.go  meta.go  server.go  session.go  session_mapper.go  translator.go  types.go
backend/internal/agents/: limits.go  limits_test.go
backend/internal/argus/: bridge.go  bridge_test.go  codesign_darwin.go  codesign_other.go  codesign_test.go  install.go  install_test.go  integration_test.go  observation.go  observation_buffer.go  observation_buffer_test.go  screen_observer.go  skills.go  tcc_darwin.go  tcc_other.go  tcc_test.go  vla_client.go
backend/internal/autoreply/: chunk.go  chunk_test.go  command_auth.go  command_detection.go  commands_args.go  commands_context.go  commands_core.go  commands_data.go  commands_handler_allowlist.go  commands_handler_approve.go  commands_handler_bash.go  commands_handler_compact.go  commands_handler_config.go  commands_handler_context_report.go  commands_handler_info.go  commands_handler_models.go  commands_handler_plugin.go  commands_handler_ptt.go  commands_handler_session.go  commands_handler_status.go  commands_handler_subagents.go  commands_handler_tts.go  commands_handler_types.go  commands_handlers_test.go  commands_registry.go  commands_test.go  commands_types.go  dispatch.go  envelope.go  envelope_test.go  group_activation.go  heartbeat.go  heartbeat_test.go  inbound_debounce.go  media_note.go  model.go  model_test.go  send_policy.go  skill_commands.go  skill_commands_test.go  (+10 more)
backend/internal/browser/: actionability.go  agent_routes.go  cdp.go  cdp_helpers.go  cdp_session.go  chrome.go  chrome_executables.go  chrome_profile_decoration.go  client.go  client_actions.go  config.go  constants.go  extension_relay.go  profiles.go  pw_ai_loop.go  pw_ai_loop_test.go  pw_ai_stub.go  pw_ai_vision.go  pw_driver.go  pw_driver_test.go  pw_playwright.go  pw_playwright_browser.go  pw_role_snapshot.go  pw_role_snapshot_test.go  pw_tools.go  pw_tools_activity.go  pw_tools_cdp.go  pw_tools_shared.go  pw_tools_state.go  server.go  session.go
backend/internal/canvas/: a2ui.go  canvas_test.go  handler.go  host_url.go  server.go
backend/internal/channels/: ack_reactions.go  action_params.go  actions.go  allowlist_helpers.go  catalog.go  channel_distributor.go  channel_distributor_test.go  channel_match.go  channel_message.go  channel_status.go  channels.go  channels_send_test.go  channels_test.go  chat_type.go  command_gating.go  config_helpers.go  config_schema.go  config_writes.go  conversation_label.go  directory_config.go  discord_guild_admin.go  discord_handle_action.go  dock.go  dock_test.go  group_mentions.go  logging.go  media_limits.go  mention_gating.go  message_actions.go  normalize.go  onboarding.go  onboarding_channel_access.go  onboarding_discord.go  onboarding_helpers.go  onboarding_imessage.go  onboarding_signal.go  onboarding_slack.go  onboarding_telegram.go  onboarding_test.go  onboarding_whatsapp.go  (+8 more)
backend/internal/cli/: argv.go  banner.go  cli_test.go  config_guard.go  dotenv.go  dotenv_test.go  gateway_rpc.go  globals.go  plugin_registry.go  progress.go  route.go  utils.go  version.go
backend/internal/config/: agentdirs.go  agentdirs_test.go  cacheutils.go  channel_capabilities.go  commands.go  config_test.go  configlog.go  configpath.go  configpath_test.go  defaults.go  defaults_test.go  envsubst.go  envsubst_test.go  features.go  features_test.go  grouppolicy.go  grouppolicy_test.go  includes.go  includes_test.go  keyring.go  keyring_test.go  legacy.go  legacy_migrations.go  legacy_migrations2.go  legacy_test.go  loader.go  merge_patch.go  merge_patch_test.go  mergeconfig.go  normpaths.go  normpaths_test.go  overrides.go  overrides_test.go  paths.go  plugin_auto_enable.go  plugin_auto_enable_test.go  portdefaults.go  redact.go  redact_test.go  schema.go  (+16 more)
backend/internal/cron/: delivery.go  isolated_agent.go  isolated_agent_helpers.go  jobs.go  locked.go  normalize.go  ops.go  parse.go  payload_migration.go  poll_normalize.go  poll_normalize_test.go  protocol_conformance_test.go  run_log.go  schedule.go  service.go  service_normalize.go  service_state.go  service_store.go  store.go  timer.go  types.go  validate_timestamp.go
backend/internal/daemon/: audit.go  constants.go  constants_test.go  diagnostics.go  inspect.go  launchd_darwin.go  node_service.go  notify_darwin.go  paths.go  paths_test.go  platform_darwin.go  platform_linux.go  platform_windows.go  plist_darwin.go  program_args.go  (+12 more)
cli-rust/: ARCHITECTURE.md  Cargo.toml  MIGRATION_MAPPING.md  TRACKING.md  deny.toml
cli-rust/.cargo/: config.toml
(+3741 files in other folders)
