[package]
name = "argus-core"
version = "0.1.0"
edition = "2024"
description = "Argus-Compound Rust core library — screen capture, input injection, image processing"

[lib]
name = "argus_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
core-graphics = "0.24"
core-graphics-types = "0.2"
core-foundation = "0.10"
screencapturekit = { version = "1.5", features = ["macos_13_0"] }
fast_image_resize = "5"
memmap2 = "0.9"
libc = "0.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
rand = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
