[package]
name = "oa-channels"
description = "Channel plugin registry, directory, and capabilities for OpenAcosmi CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
oa-types.workspace = true
oa-config.workspace = true
oa-infra.workspace = true
oa-routing.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
