[package]
name = "oa-cli-shared"
description = "CLI shared utilities: banner, globals, progress, config guard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
oa-types.workspace = true
oa-config.workspace = true
oa-infra.workspace = true
oa-terminal.workspace = true
oa-gateway-rpc.workspace = true
oa-agents.workspace = true
oa-channels.workspace = true
oa-daemon.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
colored.workspace = true
console.workspace = true
indicatif.workspace = true
regex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
