[package]
name = "oa-cmd-dns"
description = "DNS setup and hostname resolution commands"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
oa-gateway-rpc.workspace = true
tokio.workspace = true

[lints]
workspace = true
