[package]
name = "oa-cmd-mcp"
description = "CLI commands for MCP server management (install, list, status, update, uninstall)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Internal
oa-mcp-install.workspace = true
oa-gateway-rpc.workspace = true
oa-terminal.workspace = true

# CLI
clap.workspace = true

# Async
tokio.workspace = true

# Error handling
anyhow.workspace = true

# Serialization
serde_json.workspace = true

# Terminal UI
colored.workspace = true
dialoguer.workspace = true

# Logging
tracing.workspace = true

[lints]
workspace = true
