[package]
name = "oa-cmd-supporting"
description = "Supporting commands: dashboard, docs, reset, setup, uninstall, message, cleanup, daemon helpers, signal install, systemd linger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
oa-types.workspace = true
oa-config.workspace = true
oa-infra.workspace = true
oa-terminal.workspace = true
oa-cli-shared.workspace = true
oa-gateway-rpc.workspace = true
oa-agents.workspace = true
oa-channels.workspace = true
oa-daemon.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
which.workspace = true
dirs.workspace = true
regex.workspace = true
uuid.workspace = true
tempfile.workspace = true
json5.workspace = true

[lints]
workspace = true
