[package]
name = "oa-cmd-update"
description = "Self-update and channel management commands"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
oa-gateway-rpc.workspace = true
oa-config.workspace = true
oa-types.workspace = true

[lints]
workspace = true
