[package]
name = "oa-config"
description = "Configuration loading, validation, I/O, and session store for OpenAcosmi CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
oa-types.workspace = true
oa-runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
figment.workspace = true
toml.workspace = true
json5.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dirs.workspace = true
tracing.workspace = true
sha2.workspace = true
regex.workspace = true
uuid.workspace = true

[lints]
workspace = true
