[package]
name = "oa-daemon"
description = "Daemon service management (launchd/systemd) for OpenAcosmi CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
oa-types.workspace = true
oa-config.workspace = true
oa-infra.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
which.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
