[package]
name = "oa-gateway-rpc"
description = "Gateway WebSocket RPC client for OpenAcosmi CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
oa-types.workspace = true
oa-config.workspace = true
oa-infra.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
url.workspace = true
uuid.workspace = true

[lints]
workspace = true
